# dracor-metrics

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Pipfile  README.md  main.py  pyproject.toml  test_metrics.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  publish_image_to_dockerhub.yml  release.yml
app/: main.py  models.py
tests/: test_main.py  test_metrics.py
