[tool.poetry]
name = "dracor-metrics"
version = "1.4.0"
description = "Microservice calculating network metrics for dracor.org."
authors = ["Carsten Milling <cmil@hashtable.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.12"
networkx = "^3.4"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest
# Ref: https://docs.pytest.org/en/stable/customize.html
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals"]
filterwarnings = ["error"]
testpaths = "tests"

# coverage.py
# Ref: https://coverage.readthedocs.io/en/latest/config.html
# ------------------------------------------------------------------------------

[tool.coverage.run]
branch = true
parallel = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true

# ruff
# Ref: https://docs.astral.sh/ruff/configuration/
# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
src = ["app"]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "I",      # isort
  "UP",     # pyupgrade
  "RUF"     # ruff
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
