[tool.poetry]
name = "dracor-metrics"
version = "1.5.2"
description = "Microservice calculating network metrics for dracor.org."
authors = ["Carsten Milling <cmil@hashtable.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
# pydantic-core uses pyo3, which as of v0.24.1 only supports up to Python 3.13
python = "~3.13"
networkx = "^3.6"
fastapi = ">=0.135.3,<0.137.0"
uvicorn = {extras = ["standard"], version = ">=0.44,<0.49"}
# watchfiles 0.22 uses pyo3 0.21 which only supports Python <=3.12; >=0.24 adds 3.13 support
watchfiles = ">=0.24"
# uvloop 0.19 uses private CPython APIs removed in 3.13; >=0.20 adds 3.13 support
uvloop = ">=0.20"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest
# Ref: https://docs.pytest.org/en/stable/customize.html
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals"]
filterwarnings = ["error"]
testpaths = "tests"

# coverage.py
# Ref: https://coverage.readthedocs.io/en/latest/config.html
# ------------------------------------------------------------------------------

[tool.coverage.run]
branch = true
parallel = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true

# ruff
# Ref: https://docs.astral.sh/ruff/configuration/
# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
src = ["app"]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "I",      # isort
  "UP",     # pyupgrade
  "RUF"     # ruff
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
